2006-11-17  Benjamin Berg  <benjamin@sipsolutions.net>

	* themes/Industrial/gtk-2.0/gtkrc:
	- Initial color scheme support

2006-11-17  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.h:
	- definition for clearlooks_draw_button_with_gloss was missing

	* engines/support/cairo-support.c: (ge_gdk_color_to_cairo),
	(ge_cairo_color_to_gtk), (ge_cairo_set_color),
	(ge_cairo_pattern_add_color_stop_color),
	(ge_cairo_pattern_add_color_stop_shade), (ge_cairo_simple_border),
	(ge_cairo_polygon), (ge_cairo_line):
	* engines/support/cairo-support.h:
	- Add "const" to some arguments where it seemed appropriate
	(fixes some warnings in clearlooks)

2006-11-17  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_scale_trough):
	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_box):
	* engines/clearlooks/src/clearlooks_types.h:
	* engines/glide/src/glide_gtk2_drawing.c: (glide_draw_box):
	- Don't reverse engineer the trough side, but use the new GTK+
	  detail strings.

	* themes/Clearlooks/gtk-2.0/gtkrc:
	- Turn on GtkRange::trough-side-details style property for GtkScale
	  for the above changes.

2006-11-17  Daniel Borgmann  <daniel.borgmann@gmail.com>

	* themes/Clearlooks/gtk-2.0/gtkrc:
	Enable experimental gloss option.

2006-11-17  Daniel Borgmann  <daniel.borgmann@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_button_gloss),
	(clearlooks_draw_button_with_gloss), (clearlooks_draw_spinbutton),
	(clearlooks_draw_slider), (clearlooks_draw_slider_button),
	(clearlooks_draw_optionmenu), (clearlooks_draw_scrollbar_slider),
	(clearlooks_draw_handle), (clearlooks_draw_resize_grip),
	(clearlooks_draw_checkbox), (clearlooks_draw_radiobutton):
	* engines/clearlooks/src/clearlooks_draw.h:
	- Ported ubuntulooks buttonstyle and use if gloss option is set.
	- Tweaked glossy scrollbar.
	- Changed to gripdots.